// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<div
  class="App"
>
  <div
    class="Welcome"
  >
    <div
      class="Welcome-Jumbo"
    >
      <h1>
        Welcome to Polyswarm,
      </h1>
      <h2>
        The first 
        <em>
          decentralized
        </em>
         antivirus marketplace.
      </h2>
      <p>
        Simply upload files to create your own bounties and then let the microengines on Polyswarm analyze your file.
      </p>
      <button
        class="Button"
      >
        Get Started!
      </button>
    </div>
  </div>
</div>
`;

exports[`shows create when no bounties found 1`] = `null`;

exports[`shows manager when at least one bounty & active is negative 1`] = `
<App>
  <div
    className="App"
  >
    <Sidebar
      active={-1}
      bounties={
        Array [
          Object {
            "guid": "asdf",
          },
        ]
      }
      remove={[Function]}
      select={[Function]}
    >
      <div
        className="Sidebar"
      >
        <header
          className="Sidebar-Header"
        >
          <img
            alt="Polyswarm logo"
            src="/img/polyswarm.svg"
          />
        </header>
        <ul
          className="Sidebar-Content"
        >
          <ListItem
            active={false}
            className="item-0"
            item="asdf"
            key="asdf"
            onClick={[Function]}
            remove={[Function]}
          >
            <li
              className="ListItem"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <p
                className="ListItem-Name"
              >
                asdf
              </p>
            </li>
          </ListItem>
        </ul>
      </div>
    </Sidebar>
    <Header
      onClick={[Function]}
      title="Create a Bounty"
    >
      <header
        className="Header"
      >
        <h1>
          Create a Bounty
        </h1>
        <Button
          className="Header-Button"
          onClick={[Function]}
        >
          <button
            className="Button"
            onClick={[Function]}
          >
            + Bounty
          </button>
        </Button>
      </header>
    </Header>
    <div
      className="App-Content"
    >
      <Manager
        bounties={[Function]}
      >
        <div
          className="Manager"
        >
          Placeholder
        </div>
      </Manager>
    </div>
  </div>
</App>
`;

exports[`shows manager when at least one bounty & active selects it 1`] = `
<App>
  <div
    className="App"
  >
    <Sidebar
      active={0}
      bounties={
        Array [
          Object {
            "guid": "asdf",
          },
        ]
      }
      remove={[Function]}
      select={[Function]}
    >
      <div
        className="Sidebar"
      >
        <header
          className="Sidebar-Header"
        >
          <img
            alt="Polyswarm logo"
            src="/img/polyswarm.svg"
          />
        </header>
        <ul
          className="Sidebar-Content"
        >
          <ListItem
            active={true}
            className="item-0"
            item="asdf"
            key="asdf"
            onClick={[Function]}
            remove={[Function]}
          >
            <li
              className="ListItem active"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <p
                className="ListItem-Name"
              >
                asdf
              </p>
            </li>
          </ListItem>
        </ul>
      </div>
    </Sidebar>
    <Header
      onClick={[Function]}
      title="asdf"
    >
      <header
        className="Header"
      >
        <h1>
          asdf
        </h1>
        <Button
          className="Header-Button"
          onClick={[Function]}
        >
          <button
            className="Button"
            onClick={[Function]}
          >
            + Bounty
          </button>
        </Button>
      </header>
    </Header>
    <div
      className="App-Content"
    >
      <Manager
        bounties={[Function]}
        bounty={
          Object {
            "guid": "asdf",
          }
        }
      >
        <div
          className="Manager"
        >
          Placeholder
        </div>
      </Manager>
    </div>
  </div>
</App>
`;
